# dart_dec

./: INSTRUCTION.md  INSTRUCTION.txt  README.md
dart_dec/: Cargo.toml  flake.nix
dart_dec/.github/workflows/: ci.yml
dart_dec/crates/dart_dec_core/src/: memory.rs
dart_dec/crates/dart_dec_deobf/src/: control_flow.rs  symbol_recovery.rs
dart_dec/crates/dart_dec_disasm/: Cargo.toml
dart_dec/crates/dart_dec_disasm/src/: arm32.rs  x86_64.rs
dart_dec/crates/dart_dec_graph/: Cargo.toml
dart_dec/crates/dart_dec_graph/src/: ssa.rs  structuring.rs
dart_dec/crates/dart_dec_lib/src/: ffi.rs
dart_dec/crates/dart_dec_lifter/: Cargo.toml
dart_dec/crates/dart_dec_lifter/src/: arm64_lift.rs
dart_dec/crates/dart_dec_output/: Cargo.toml
dart_dec/crates/dart_dec_output/src/: json.rs  lib.rs  protobuf.rs  sqlite.rs
dart_dec/crates/dart_dec_patterns/src/: cascade.rs
dart_dec/crates/dart_dec_profiles/profiles/: dart_3.0.json  dart_3.2.json  dart_3.5.json
dart_dec/crates/dart_dec_profiles/src/: tests.rs
dart_dec/crates/dart_dec_python/: Cargo.toml
dart_dec/crates/dart_dec_scan/src/: permissions.rs  secrets.rs
dart_dec/crates/dart_dec_snapshot/src/: tests.rs  types.rs
dart_dec/plugins/ghidra/: DartDecAnalyze.java
dart_dec/tests/fixtures/: async_function.dart  null_safety.dart
src/dart_dec/: Dockerfile  README.md  dart_dec.toml  pyproject.toml
src/dart_dec/crates/dart_dec_cli/: Cargo.toml
src/dart_dec/crates/dart_dec_cli/benches/: benchmark.rs
src/dart_dec/crates/dart_dec_cli/src/: main.rs
src/dart_dec/crates/dart_dec_core/: Cargo.toml
src/dart_dec/crates/dart_dec_core/src/: elf.rs  errors.rs  lib.rs  macho.rs  pe.rs  sections.rs  tests.rs  version.rs
src/dart_dec/crates/dart_dec_deobf/: Cargo.toml
src/dart_dec/crates/dart_dec_deobf/src/: heuristics.rs  lib.rs  string_decrypt.rs
src/dart_dec/crates/dart_dec_disasm/src/: arm64.rs  common.rs  lib.rs  tests.rs
src/dart_dec/crates/dart_dec_graph/src/: ast.rs  cfg.rs  dominators.rs  lib.rs  loop_detect.rs  tests.rs  type_propagation.rs
src/dart_dec/crates/dart_dec_lib/: Cargo.toml
src/dart_dec/crates/dart_dec_lib/src/: lib.rs
src/dart_dec/crates/dart_dec_lifter/src/: arm32_lift.rs  ir.rs  lib.rs  pool_resolver.rs  stub_resolver.rs  tests.rs  x86_64_lift.rs
src/dart_dec/crates/dart_dec_output/src/: dart_codegen.rs  sarif.rs  tests.rs
src/dart_dec/crates/dart_dec_patterns/: Cargo.toml
src/dart_dec/crates/dart_dec_patterns/src/: async_await.rs  closures.rs  collections.rs  extensions.rs  lib.rs  null_safety.rs  records.rs  sealed.rs  streams.rs  string_interpolation.rs
src/dart_dec/crates/dart_dec_profiles/: Cargo.toml
src/dart_dec/crates/dart_dec_profiles/profiles/: dart_2.19.json  dart_3.9.json
src/dart_dec/crates/dart_dec_profiles/src/: lib.rs  resolver.rs  schema.rs
src/dart_dec/crates/dart_dec_python/src/: lib.rs
src/dart_dec/crates/dart_dec_scan/: Cargo.toml
src/dart_dec/crates/dart_dec_scan/src/: crypto.rs  lib.rs  tests.rs  yara.rs
src/dart_dec/crates/dart_dec_snapshot/: Cargo.toml
src/dart_dec/crates/dart_dec_snapshot/src/: class_table.rs  header.rs  lib.rs  object_pool.rs  string_table.rs  stubs.rs
src/dart_dec/plugins/ghidra/: README.md
src/dart_dec/plugins/ida/: README.md  dart_dec_ida.py
src/dart_dec/tests/: fuzz_targets.rs
src/dart_dec/tests/fixtures/: collections.dart  sealed_class.dart  simple_class.dart
src/dart_dec/tests/integration/: pipeline_test.rs
