[package]
name = "dart_dec_graph"
version.workspace = true
edition.workspace = true
description = "CFG, SSA, dominators, loop detection, structuring, and AST"

[dependencies]
dart_dec_core = { path = "../dart_dec_core" }
dart_dec_lifter = { path = "../dart_dec_lifter" }
dart_dec_snapshot = { path = "../dart_dec_snapshot" }
petgraph.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ahash.workspace = true

[dev-dependencies]
insta.workspace = true
