[package]
name = "dart_dec_lifter"
version.workspace = true
edition.workspace = true
description = "IR lifter: assembly to intermediate representation"

[dependencies]
dart_dec_core = { path = "../dart_dec_core" }
dart_dec_disasm = { path = "../dart_dec_disasm" }
dart_dec_snapshot = { path = "../dart_dec_snapshot" }
dart_dec_profiles = { path = "../dart_dec_profiles" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ahash.workspace = true

[dev-dependencies]
insta.workspace = true
