[package]
name = "dart_dec_python"
version.workspace = true
edition.workspace = true
description = "Python bindings for dart_dec (PyO3)"

[lib]
name = "dart_dec"
crate-type = ["cdylib"]

[dependencies]
dart_dec_core = { path = "../dart_dec_core" }
dart_dec_snapshot = { path = "../dart_dec_snapshot" }
dart_dec_profiles = { path = "../dart_dec_profiles" }
dart_dec_disasm = { path = "../dart_dec_disasm" }
dart_dec_lifter = { path = "../dart_dec_lifter" }
dart_dec_graph = { path = "../dart_dec_graph" }
dart_dec_patterns = { path = "../dart_dec_patterns" }
dart_dec_deobf = { path = "../dart_dec_deobf" }
dart_dec_output = { path = "../dart_dec_output" }
dart_dec_scan = { path = "../dart_dec_scan" }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = "1.0"
