[package]
name = "dart_dec_core"
version.workspace = true
edition.workspace = true
description = "Core ELF/Mach-O/PE parsing and section mapping for dart_dec"

[dependencies]
memmap2.workspace = true
goblin.workspace = true
memchr.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
byteorder.workspace = true
regex.workspace = true
once_cell.workspace = true
ahash.workspace = true

[dev-dependencies]
insta.workspace = true
