[package]
name = "dart_dec_lib"
version.workspace = true
edition.workspace = true
description = "Library mode with C FFI for dart_dec"

[lib]
name = "dart_dec"
crate-type = ["cdylib", "rlib"]

[dependencies]
dart_dec_core = { path = "../dart_dec_core" }
dart_dec_snapshot = { path = "../dart_dec_snapshot" }
dart_dec_profiles = { path = "../dart_dec_profiles" }
dart_dec_disasm = { path = "../dart_dec_disasm" }
dart_dec_lifter = { path = "../dart_dec_lifter" }
dart_dec_graph = { path = "../dart_dec_graph" }
dart_dec_patterns = { path = "../dart_dec_patterns" }
dart_dec_deobf = { path = "../dart_dec_deobf" }
dart_dec_output = { path = "../dart_dec_output" }
dart_dec_scan = { path = "../dart_dec_scan" }
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
rayon.workspace = true
