[package]
name = "dart_dec_patterns"
version.workspace = true
edition.workspace = true
description = "High-level Dart pattern recovery (async/await, streams, records, etc.)"

[dependencies]
dart_dec_core = { path = "../dart_dec_core" }
dart_dec_graph = { path = "../dart_dec_graph" }
dart_dec_lifter = { path = "../dart_dec_lifter" }
dart_dec_snapshot = { path = "../dart_dec_snapshot" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
ahash.workspace = true
regex.workspace = true

[dev-dependencies]
insta.workspace = true
