[package]
name = "dart_dec_profiles"
version.workspace = true
edition.workspace = true
description = "Dart VM version profiles and layout engine"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
ahash.workspace = true
regex.workspace = true

[dev-dependencies]
insta.workspace = true
