[package]
name = "dart_dec_scan"
version.workspace = true
edition.workspace = true
description = "Security scanners: YARA, secrets, crypto, permissions"

[dependencies]
dart_dec_core = { path = "../dart_dec_core" }
dart_dec_snapshot = { path = "../dart_dec_snapshot" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
ahash.workspace = true
memchr.workspace = true

[dev-dependencies]
insta.workspace = true
